--- a/Login/login.css
+++ b/Login/login.css
@@ -12,7 +12,10 @@ main {
   border-radius: 30px;
   position: fixed;
   padding: 15px;
-  background: linear-gradient(180deg, #ffaa42, #ff912d);
+  background: linear-gradient(-90deg, #fbc141, #f7e478);
+  justify-content: center;
+  margin-top: 100px;
+  margin-left: 40px;
 }
 
 .market {
@@ -21,14 +24,33 @@ main {
 
 .div-img {
   /* position: fixed; */
-  margin-right: 20px;
+  margin-right: -20px;
+  display: flex;
+  /* width: 480px; */
 }
 .img-log {
   border-radius: 20px;
-  box-shadow: 20px 0px 15px #e27713;
+  box-shadow: 10px 0px 20px #f7b82e;
 }
 
 .back-H {
+    position: absolute;
+    left: 320px;
+    padding-top: 20px;
+    background-color: #f7b82e;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 25px;
+}
+
+.back {
+    display: flex;
+}
+
+a {
+    font-size: 12px;
+    color: black;
+    
 }
 
 /* Formulaire */
@@ -38,11 +60,13 @@ main {
   float: left;
   padding-left: 20px;
   padding: 40px;
+  margin-left: 47px;
 }
 
 p {
   font-size: 0.8rem;
   margin-top: 0;
+  margin-bottom: 20px;
 }
 #clic {
   width: 15px;
@@ -66,7 +90,7 @@ p {
 input {
   border-radius: 4px;
   margin-bottom: 30px;
-  background-color: rgba(246, 181, 112, 0.5);
+  background-color: rgba(248, 239, 229, 0.204);
   border: 1px solid #ffffff;
 }
 
@@ -116,10 +140,8 @@ button p {
   align-content: center;
 }
 
-
 .line {
-    width: 320px;
-
+  width: 320px;
 }
 .reg {
   text-align: center;
