--- a/Forgot/Forgot.css
+++ b/Forgot/Forgot.css
@@ -19,7 +19,6 @@ body {
 .form {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: #f6b570;
   border-radius: 30px;
   padding: 12px;
   background: linear-gradient(45deg, #fbadf9, #f9d8f7);
@@ -33,7 +32,22 @@ body {
   width: 85%;
 }
 
-/* lien retouv a l'acceuil */
+/* H1 title */
+
+.h1-t {
+  font-size: 3rem;
+  margin-top: 0;
+  margin-bottom:10px;
+}
+
+
+
+
+.img-log {
+  border-radius: 20px;
+  box-shadow: 10px 0px 20px  #fabbf8;
+}
+
 .back-H {
   position: absolute;
   left: 320px;
@@ -52,38 +66,17 @@ transform: scale(1.1);
 transition: all .5s;
 }
 
-/* H1 title */
 
-.h1-t {
-  font-size: 3rem;
-  margin-top: 0;
-  margin-bottom:10px;
+.h1-1, .h1-2{
+ margin-top: 0;
 }
 
-
-
-.div-img {
-  
-  margin-right: -20px;
-  display: flex;
-}
-.img-log {
-  border-radius: 20px;
-  box-shadow: 10px 0px 20px  #fabbf8;
+.h1-1 {
+  margin-bottom: -10px;
+  font-size: 4rem;
 }
 
-.back-H {
-    position: absolute;
-    left: 320px;
-    padding-top: 20px;
-    /* background-color: #Fb61f8; */
-    background: linear-gradient(45deg, #fbadf9, #f9d8f7);
-    padding: 10px;
-    border-radius: 10px;
-    margin-top: 25px;
-}
-
-
+/* Lien retour a l'accueil */
 a {
     font-size: 12px;
     color: black;
@@ -98,9 +91,8 @@ a {
   height: 600px;
   align-items: center; 
   justify-items: center;
-  padding-left: 60px;
+  padding-left: 40px;
 }
-
 
 p {
   font-size: 0.8rem;
@@ -141,7 +133,7 @@ hr {
 }
 
 .Left-line {
-  margin-left: 220px;
+  margin-left: 240px;
   right: 200px;
 }
 
@@ -164,6 +156,7 @@ input {
 }
 
 .log {
+  margin-top: 30px;
   width: 325px;
   height: 35px;
   border: 1px solid rgba(250, 187, 248, .5);
