--- a/Register/register.css
+++ b/Register/register.css
@@ -1,8 +1,10 @@
 body {
   font-family: "poppins", sans-serif;
-  background-color: (180deg, #9d5b0a, #3c2209);
 }
 
+body{
+  
+}
 
 .container {
   display: flex;
@@ -16,11 +18,13 @@ body {
   border-radius: 30px;
   scale: 1.005;
 }
+
 .form {
   display: grid;
   grid-template-columns: 1fr 1fr;
   background-color: #f6b570;
   border-radius: 30px;
+  /* position: fixed; */
   padding: 12px;
   background: linear-gradient(45deg, #fbadf9, #f9d8f7);
 
@@ -33,50 +37,18 @@ body {
   width: 85%;
 }
 
-/* lien retouv a l'acceuil */
-.back-H {
-  position: absolute;
-  left: 320px;
-  padding-top: 20px;
-  background: linear-gradient(45deg, #fbadf9, #f9d8f7);
-  padding: 10px;
-  border-radius: 10px;
-  margin-top: 25px;
-}
+/* Bolc de l'image */
 
 
-.back-H:hover {
-background: #f053e6;
-cursor: pointer;
-transform: scale(1.1);
-transition: all .5s;
-}
-
-/* H1 title */
-
-.h1-t {
-  font-size: 3rem;
-  margin-top: 0;
-  margin-bottom:10px;
-}
-
-
-
-.div-img {
-  
-  margin-right: -20px;
-  display: flex;
-}
 .img-log {
   border-radius: 20px;
-  box-shadow: 10px 0px 20px  #fabbf8;
+  box-shadow: 10px 0px 20px  #fbadf9;
 }
 
 .back-H {
     position: absolute;
     left: 320px;
     padding-top: 20px;
-    /* background-color: #Fb61f8; */
     background: linear-gradient(45deg, #fbadf9, #f9d8f7);
     padding: 10px;
     border-radius: 10px;
@@ -84,11 +56,26 @@ transition: all .5s;
 }
 
 
+.back-H:hover {
+  background: #f053e6;
+  cursor: pointer;
+  transform: scale(1.1);
+  transition: all .5s;
+}
+
+/* Titre du formulaire */
+
+.h1-1 {
+  font-size: 2rem;
+  margin: 0px 0 -20px;
+}
+
 a {
     font-size: 12px;
     color: black;
     text-decoration: none;
 }
+
 
 /* Formulaire */
 
@@ -98,7 +85,7 @@ a {
   height: 600px;
   align-items: center; 
   justify-items: center;
-  padding-left: 60px;
+  padding-left: 40px;
 }
 
 
@@ -107,37 +94,23 @@ p {
   margin-top: 0;
   margin-bottom: 20px;
 }
+
 #clic {
   width: 15px;
   height: 15px;
   margin: 0;
 }
 
-.agree {
-  display: grid;
-  grid-template-columns: 1fr 20fr;
-  align-items: center;
-  /* margin-bottom: 15px; */
-  height: 40px;
-  width: 330px;
-  margin-top: 10px;
-  margin-bottom: 30px;
-  
-}
-
-.agree p {
-  margin: 0 0 0 15px;
-}
-
 /* Or register with */
 
 .line {
-  margin: 30px 0;
+  margin: 10px 0;
   
 }
 
 hr {
   margin: 0;
+  
 }
 
 .Left-line {
@@ -154,7 +127,22 @@ hr {
   margin: 0;
 }
 
-/* Create account */
+/* Boutton agree */
+
+.agree {
+  display: grid;
+  grid-template-columns: 1fr 20fr;
+  align-items: center;
+  height: 40px;
+  width: 330px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.agree p {
+  margin : 0 0 0 15px;
+
+}
 
 input {
   border-radius: 4px;
@@ -166,17 +154,17 @@ input {
 .log {
   width: 325px;
   height: 35px;
-  border: 1px solid rgba(250, 187, 248, .5);
+  border: 1px solid #f4e0c7;
   border-radius: 5px;
 }
 
 .name,
 .L-name {
   padding: 7px;
-  /* width: 100px;
-  height: 15px; */
+  
 }
 
+/* Les input */
 .mail,
 .pwd {
   width: 312px;
@@ -190,6 +178,7 @@ input {
 button {
   width: 150px;
   height: 30px;
+  margin-top: 10x;
   
 }
 
@@ -197,11 +186,12 @@ button p {
   margin: 0;
   width: 50px;
 }
+
 .log-w {
   padding-top: 10px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: space-evenly;
+  display: inline-flex;
+  gap: 20px;
+  
 }
 
 .log-w button {
@@ -211,22 +201,6 @@ button p {
 }
 .google,
 .apple {
-  padding-top: 2px;
+  padding-top: 3px;
   align-items: center;
-
 }
-
-.line {
-  width: 320px;
-}
-
-/* Mdp oublie */
-
-.forgot-pwd {
-  width: 325px;
-  margin-top: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr ;
-  text-align: center;
-}
-
